# LyCLLM

./: .gitignore  Makefile  README.md  download.py  pyproject.toml  readme.md  requirements.txt  train.py
config/: data.yaml  finetune.yaml  model.yaml  train.yaml
learner/: llava_ov.py
mllm/llava-onevision-qwen2-0.5b-ov-hf/: config.json
src/lycllm/data/: datamodule.py  datamodule_1_5.py  datamodule_ov_bk.py  datamodule_ov_v2bk.py
src/lycllm/extras/: constants.py
src/lycllm/hparams/: data_args.py  finetuning_args.py  model_args.py
src/lycllm/learner/: llava_ov.py  qwen3vl.py
src/lycllm/model/: loader.py  patcher.py
tests/: conftest.py  qwen_sft.py
tests/data/: test_datamodule.py
