[build-system]
requires = ["uv_build>=0.10,<0.11"]
build-backend = "uv_build"

[project]
name = "LyCLLM"
version = "0.1.2"
description = "Continual Learning Library for Language Models based on PyTorch Lightning (2.x)."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "datasets[vision,audio]>=4.4,<5",
    "transformers[vision,audio,video]>=4.57,<5",
    "decord",
    "peft>=0.11,<0.19",
    "deepspeed<0.17",
    "jsonargparse[signatures,jsonschema,jsonnet]>4.40,<4.48",
    "omegaconf"
]

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
    "pytest-xdist",
    "ruff",
]

# conflict lightning and lightning-npu
[project.optional-dependencies]
cuda = [
    "lycllm[torch-cuda,lightning,wandb]"
]
npu = [
    "torch-npu>=2.1.0",
    "decorator",
    "psutil",
    "importlib_metadata",
    # "lightning @ git+https://github.com/SmallPigPeppa/pytorch-lightning.git@npu_support_fp16_mixed",
    "lycllm[wandb]"
]
ghactions = [
    "torch @ https://download.pytorch.org/whl/cpu/torch-2.8.0%2Bcpu-cp312-cp312-manylinux_2_28_x86_64.whl ; platform_system == 'Linux' and python_version == '3.12' and platform_machine == 'x86_64'",
    "torchvision @ https://download-r2.pytorch.org/whl/cpu/torchvision-0.23.0%2Bcpu-cp312-cp312-manylinux_2_28_x86_64.whl ; platform_system == 'Linux' and python_version == '3.12' and platform_machine == 'x86_64'",
    "lycllm[lightning,wandb]",
]
torch-cuda = [
    "torch>=2.7.1,<2.10.0",
    "torchvision",
    "torchaudio",
]
lightning = [
    "lightning>=2.2.0,<2.6.0",
]
wandb = [
    "wandb>=0.20.0,<0.25.0,!=0.24.0"
]

[project.urls]
source = "https://github.com/Moenupa/LyCLLM"
issues = "https://github.com/Moenupa/LyCLLM/issues"
releasenotes = "https://github.com/Moenupa/LyCLLM/releases"

[tool.uv]
conflicts = [
    [
        { extra = "ghactions" },
        { extra = "cuda" },
        { extra = "npu" },
        { extra = "torch-cuda" },
    ],
    [
        { extra = "npu" },
        { extra = "lightning" },
    ],
]

# if you are using CUDA and wants to specify cuda version
# [tool.uv.sources]
# torch = [
# 	{ index = "pytorch-cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
# ]
# torchvision = [
# 	{ index = "pytorch-cu129", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
# ]
[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff.lint]
ignore = [
    "C408",  # collection
    "C901",  # function too complex
    "E501",  # line too long
    "D100",  # no doc public module
    "D101",  # no doc public class
    "D102",  # no doc public method
    "D103",  # no doc public function
    "D104",  # no doc public package
    "D105",  # no doc magic method
    "D107",  # no doc __init__
]
extend-select = [
    "C",      # complexity
    "E",      # error
    "F",      # pyflakes
    "I",      # isort
    "W",      # warning
    "UP",     # pyupgrade
    # "D",      # pydocstyle
    "PT009",  # pytest assert
    "RUF022", # sort __all__
]

[tool.ruff.lint.isort]
known-first-party = ["lycllm"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vv --import-mode=importlib"
filterwarnings = [
]
markers = [
    "runs_on: mark tests requiring specific device type, e.g. @pytest.mark.runs_on(['cuda'])",
    "slow: mark tests as slow (pytest -m 'not slow' or set RUN_SLOW=1 to run)",
    "distributed: mark tests requireing multi-device execution",
]
